added new background and button

--- a/backend/main.html
+++ b/backend/main.html
@@ -2,9 +2,11 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="/frontend/style.css" />
+        <title>Training</title>
     </head>
     <body>
-        <class="header" id="Top-header">This is my Social-Media Website</class>
+        <div class="container-background"></div>
+        <button class="button-63" role="button">Login</button>
     </body>
 </html>
