--- a/backend/main.html
+++ b/backend/main.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <div class="container-background"></div>
-        <button class="button-63" role="button">Login</button>
+        <button class="button-63" role="button">Enter the main-page</button>
     </body>
 </html>
