--- a/website/backend/second.html
+++ b/website/backend/second.html
@@ -3,11 +3,9 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/website/frontend/style.css" />
-    <title>Training</title>
+    <title>Training-Main</title>
   </head>
   <body>
     <div class="container-background"></div>
-    <button class="button-63" role="button">Enter the main-page</button>
-    <script src="/website/backend/index.js"></script>
   </body>
 </html>
