first style of the second page

--- a/website/backend/second.html
+++ b/website/backend/second.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/website/frontend/style.css" />
-    <title>Training-Main</title>
+    <meta charset="UTF-8" />
+    <title>Meine Trainigs-Website</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/website/frontend/styles_two.css"
+    />
   </head>
   <body>
-    <div class="container-background"></div>
+    <header>
+      <h1>Meine Daten-Website</h1>
+    </header>
+    <div id="content">
+      <!-- Hier können später Daten angezeigt werden -->
+    </div>
+    <footer>&copy; 2023 Fischer Jonas</footer>
   </body>
 </html>
