first style and test

--- a/website/backend/second.html
+++ b/website/backend/second.html
@@ -16,6 +16,6 @@
     <div id="content">
       <!-- Hier können später Daten angezeigt werden -->
     </div>
-    <footer>&copy; 2023 Fischer Jonas</footer>
+    <footer>&copy; 2023 Fischer Jonas working for MediaMarktSaturn</footer>
   </body>
 </html>
