styling and first steps for the notepad feature

--- a/website/backend/main.html
+++ b/website/backend/main.html
@@ -6,7 +6,7 @@
     <title>Training</title>
   </head>
   <body>
-    <div class="container-background"></div>
+    <div class="background"></div>
     <button class="button-63" role="button">Enter the main-page</button>
     <script src="/website/backend/index.js"></script>
   </body>
