first working version of the To-Do app

--- a/website/backend/second.html
+++ b/website/backend/second.html
@@ -11,15 +11,16 @@
   <body>
     <header id="header"><h1>Meine Daten-Website</h1></header>
     <form id="form">
-      <h2>to-do</h2>
+      <h2>TO-DO-LIST</h2>
       <input
         type="text"
         id="input"
         class="input"
         placeholder="Enter your to-do"
+        autocomplete="off"
       />
-      <ul class="todos">
-        <li>This is a todo</li>
+      <ul class="todos" id="todos">
+        <li></li>
       </ul>
     </form>
     <footer>&copy; 2023 Fischer Jonas</footer>
