fancy background and first steps to login process

--- a/website/backend/main.html
+++ b/website/backend/main.html
@@ -6,8 +6,39 @@
     <title>Training</title>
   </head>
   <body>
-    <div class="background"></div>
-    <button class="button-63" role="button">Enter the main-page</button>
+    <div class="background">
+      <div class="bubbles">
+        <span style="--i: 11"></span>
+        <span style="--i: 12"></span>
+        <span style="--i: 24"></span>
+        <span style="--i: 10"></span>
+        <span style="--i: 14"></span>
+        <span style="--i: 23"></span>
+        <span style="--i: 18"></span>
+        <span style="--i: 16"></span>
+        <span style="--i: 19"></span>
+        <span style="--i: 20"></span>
+        <span style="--i: 22"></span>
+        <span style="--i: 25"></span>
+        <span style="--i: 18"></span>
+        <span style="--i: 21"></span>
+        <span style="--i: 15"></span>
+        <span style="--i: 13"></span>
+        <span style="--i: 26"></span>
+        <span style="--i: 17"></span>
+        <span style="--i: 13"></span>
+        <span style="--i: 28"></span>
+      </div>
+    </div>
+    <h1>Hello this is my Trainingsprojekt!</h1>
+    <input
+      type="text"
+      id="input"
+      class="input"
+      placeholder="Enter your Password"
+      autocomplete="off"
+    />
+    <button class="button-63" role="button">Send password!</button>
     <script src="/website/backend/index.js"></script>
   </body>
 </html>
