--- a/website/backend/second.html
+++ b/website/backend/second.html
@@ -11,7 +11,7 @@
   <body>
     <header id="header"><h1>Meine Daten-Website</h1></header>
     <form id="form">
-      <h2>TO-DO-LIST</h2>
+      <h2>TO-DO-LIST:</h2>
       <input
         type="text"
         id="input"
