Added Login mechanism and fixed to do so it wont be deleted by reload

--- a/website/backend/main.html
+++ b/website/backend/main.html
@@ -33,12 +33,14 @@
     <h1>Hello this is my Trainingsprojekt!</h1>
     <input
       type="text"
-      id="input"
-      class="input"
-      placeholder="Enter your Password"
+      id="login"
+      placeholder="Benutzername"
       autocomplete="off"
     />
-    <button class="button-63" role="button">Send password!</button>
+    <input type="password" id="password" placeholder="Passwort" />
+    <button class="button63" role="button" id="button63">Anmelden</button>
+    <p id="loginStatus"></p>
+    <script src="login.js"></script>
     <script src="/website/backend/index.js"></script>
   </body>
 </html>
