Changed hole site after login

--- a/website/backend/main.html
+++ b/website/backend/main.html
@@ -30,7 +30,7 @@
         <span style="--i: 28"></span>
       </div>
     </div>
-    <h1>Hello this is my Trainingsprojekt!</h1>
+    <h1>Hello this is my training project!</h1>
     <input
       type="text"
       id="login"
