--- a/website/backend/profile.html
+++ b/website/backend/profile.html
@@ -18,15 +18,7 @@
       </nav>
     </header>
     <section class="hero">
-      <h1>Welcome to Task World</h1>
-      <p>
-        This is my simple website where I learn new code and you guys can use it
-        for being productive.<br />
-        But remember this is just the first version in which we only got a TO-DO
-        App now.<br /><br /><br />You can follow my GitHub where I will post
-        Updates in the future!<br />Stay tuned!
-      </p>
-      <a href="https://github.com/floetenheini" class="cta-button">GitHub</a>
+      <h1>Coming soon...!</h1>
     </section>
   </body>
 </html>
